<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    android:backgroundTint="#9e9e9e"
    android:backgroundTintMode="multiply"
    tools:context=".authentication.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/bike_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/AllEditTexts"
        android:layout_above="@id/etPassword"
        android:layout_marginBottom="24dp"
        android:ems="20"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/AllEditTexts"
        android:layout_above="@id/btnLogin"
        android:layout_marginBottom="24dp"
        android:ems="20"
        android:hint="@string/pwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@color/bg_startUp"
        android:text="@string/btn_home"
        android:onClick="onUserLoginClick"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvForgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:onClick="onSignUpTextClick"
        android:textStyle="bold"
        android:text="@string/signUp_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="164dp"
        android:onClick="onForgotPasswordTextClick"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white" />

</RelativeLayout>