<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_startUp"
    tools:context=".home.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleMarginStart="38dp">

        <ImageView
            android:id="@+id/bluetoothSettings"
            android:layout_width="10dp"
            android:layout_height="16dp"
            android:layout_gravity="end"
            android:contentDescription="@string/bluetooth_settings"
            android:onClick="onClickBluetoothSettings"
            android:scaleType="centerCrop"
            android:src="@drawable/bluetooth_settings"
            android:tooltipText="@string/bluetooth_settings" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarHome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:text="@android:string/ok" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtWelcome"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgBluetooth"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/bluetooth_toggle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/scan"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="On" />

            <Button
                android:id="@+id/off"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Off" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="OK"
            android:id="@+id/bluetoothStatus"
            android:ellipsize="end"
            android:maxLines="1" />

        <Button
            android:id="@+id/PairedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@color/purple_500"
            android:padding="8dp"
            android:text="@string/show_connected"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@color/purple_500"
            android:padding="8dp"
            android:text="Discover New Devices"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/devicesListView"
        android:choiceMode="singleChoice"
        android:layout_below="@+id/linearLayout"
        android:layout_above="@id/btnGetLocation"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnGetLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:background="@color/purple_700"
        android:onClick="onClickNavigation"
        android:text="@string/get_location_screen"
        android:textAllCaps="false"
        android:layout_margin="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/white" />


</RelativeLayout>